fix label gap variablename

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -321,8 +321,6 @@ aside {
     opacity: 0;
   }
 
-  
-
   /* divide gap between both items */
   ion-item[data-wrap-pref] {
     --label-gap: var(--spacer-xl);
@@ -345,14 +343,13 @@ aside {
   }
 
   ion-item[data-wrap-pref] ::slotted([slot=end]), ion-item[data-wrap-pref]>[slot=end] {
-    /* using important flag here to override Ionic styling which also uses important flag */
-    flex: var(--end-flex, 1 1 0) !important; 
-    margin-inline-start: var(--label-gap, 32px);
+    flex: var(--end-flex, 1 1 0) !important; /* using important flag here to override Ionic styling which also uses important flag */
+    margin-inline-start: var(--label-gap-end, 32px); /* default value is same as Ionic */
     text-align: end;
   }
   
   ion-item[data-wrap-pref] ::slotted(ion-label:not([slot=end])) {
     flex: var(--start-flex, 1 1 0);
-    margin-inline-end: var(--label-gap, 0px);
+    margin-inline-end: var(--label-gap-start, 0px);
   }
 }
